--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -13,7 +13,7 @@ ADD lib ./lib
 RUN make bins
 
 FROM alpine:3.6
-RUN apk add --no-cache libc6-compat
+RUN apk add --no-cache libc6-compat curl iftop
 
 COPY --from=builder /workspace/github.com/uber/makisu/bin/makisu/makisu /makisu-internal/makisu
 ADD ./assets/cacerts.pem /makisu-internal/certs/cacerts.pem
